--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ body {
   color: #fff;
   line-height: 1;
   background-color: #171311;
-  font-size: clamp(1rem, calc(12px + 1vw), 20px); }
+  font-size: clamp(1em, calc(12px + 1vw), 20px); }
 
 mark {
   background-color: transparent;
@@ -64,7 +64,8 @@ a {
     border: 0; }
 
 h1 {
-  margin: 0 0 0.75em 0; }
+  margin: 0 0 0.75em 0;
+  font-size: clamp(2em, calc(20px + 1vw), 3.25em); }
 
 h2, h3, h4, h5, h6 {
   margin: 0 0 2em 0; }
@@ -177,7 +178,12 @@ header > p {
       width: 100%;
       max-width: calc(100% - 20px); }
       .container.medium {
-        width: 100%; } }
+        width: 100%;
+        text-align: center; } }
+
+@media screen and (max-width: 1280px) {
+  #top .container {
+    width: 100%; } }
 
 /* Row */
 .row {
@@ -850,8 +856,10 @@ button {
   cursor: pointer;
   border-radius: 8px;
   overflow: hidden;
-  padding: 0.8em 2em;
-  max-width: 24em;
+  padding: 1em 2em;
+  margin: 0 0.2em;
+  width: 24em;
+  max-width: 90em;
   color: #fff; }
   input[type="button"]:hover,
   input[type="submit"]:hover,
@@ -904,7 +912,8 @@ ul.actions {
   text-align: center;
   padding: 2em; }
   .box.style1 {
-    padding: 3em 2em; }
+    padding: 3em 2em;
+    background-color: #490a29; }
     .box.style1 h3 {
       margin-bottom: 0.5em; }
   .box.style2 h3 {
@@ -995,21 +1004,17 @@ body > article {
 
 #top {
   padding: 3em 0;
-  text-align: left; }
+  text-align: center; }
   #top .image {
     border-radius: 100%;
     width: 20em;
     height: 20em;
     margin: 0;
-    margin-top: 4em; }
+    margin-top: 1em; }
     #top .image img {
       border-radius: 100%; }
   #top h1 {
     margin-top: 0.35em; }
-  #top p {
-    line-height: 1.75em; }
-    #top p a {
-      color: inherit; }
 
 /* Copyright */
 #copyright {
@@ -1049,8 +1054,8 @@ body > article {
   #top {
     padding: 3em 0; }
     #top .image {
-      width: 24em;
-      height: 24em;
+      width: 15em;
+      height: 15em;
       margin: 0;
       margin-top: 3em; } }
 /* Medium */
@@ -1063,7 +1068,8 @@ body > article {
       margin: 0 auto 2em auto; }
 
   #header-li {
-    text-align: center; }
+    text-align: center;
+    width: 100%; }
     #header-li ul {
       display: inline-block;
       text-align: left; }
@@ -1101,8 +1107,9 @@ body > article {
   button,
   .button {
     text-align: center;
-    width: 100%;
-    padding: 1em 0 1em 0; }
+    width: 70%;
+    padding: 1em 0 1em 0;
+    margin: 0.5em 0; }
     input[type="button"].large,
     input[type="submit"].large,
     input[type="reset"].large,
@@ -1129,10 +1136,6 @@ body > article {
       top: 20px;
       margin: -50px 0 50px -40px;
       width: auto; }
-    .box.style1 {
-      max-width: 32em; }
-    .box.style2 {
-      max-width: 32em; }
 
   /* Wrappers */
   .wrapper {
@@ -1203,14 +1206,12 @@ body > article {
   background-image: url("../images/check.svg");
   background-size: cover; }
 
-#header-h1 {
-  line-height: 1em; }
-
 header {
   background-color: #100e0c; }
 
 #promotion-box {
-  background-color: #490a29; }
+  background-color: #490a29;
+  width: 100%; }
 
 footer {
   background-color: #100e0c;
