--- a/css/main.scss
+++ b/css/main.scss
@@ -10,7 +10,8 @@ $main-color-hover: #f56b41;
 $body-color: #171311;
 $body-sec-color: #100e0c;
 $font-color: #fff;
-$main-font-size: clamp(1rem, calc(12px + 1vw), 20px);
+$main-font-size: clamp(1em, calc(12px + 1vw), 20px);
+$h1-font-size: clamp(2em, calc(20px + 1vw), 3.25em);
 $footer-font-size: 0.8em;
 $footer-font-color: #8a8a8a;
 
@@ -112,6 +113,7 @@ a {
 
 h1 {
   margin: 0 0 0.75em 0;
+  font-size: $h1-font-size;
 }
 
 h2, h3, h4, h5, h6 {
@@ -280,9 +282,17 @@ header {
 
     &.medium {
       width: 100%;
+      text-align: center;
     }
   }
 }
+
+#top .container{
+  @include breakpoint('<=large') {
+    width: 100%;
+  }
+}
+
 
 /* Row */
 
@@ -361,8 +371,10 @@ button {
   cursor: pointer;
   border-radius: 8px;
   overflow: hidden;
-  padding: 0.8em 2em;
-  max-width: 24em;
+  padding: 1em 2em;
+  margin: 0 0.2em;
+  width: 24em;
+  max-width: 90em;
   color: $font-color;
 
 
@@ -432,6 +444,7 @@ ul.actions {
 
   &.style1 {
     padding: 3em 2em;
+    background-color: #490a29;
 
     h3 {
       margin-bottom: 0.5em;
@@ -554,14 +567,14 @@ body > article {
 
 #top {
   padding: 3em 0;
-  text-align: left;
+  text-align: center;
 
   .image {
     border-radius: 100%;
     width: 20em;
     height: 20em;
     margin: 0;
-    margin-top: 4em;
+    margin-top: 1em;
 
     img {
       border-radius: 100%;
@@ -570,14 +583,6 @@ body > article {
 
   h1 {
     margin-top: 0.35em;
-  }
-
-  p {
-    line-height: 1.75em;
-
-    a {
-      color: inherit;
-    }
   }
 }
 
@@ -642,8 +647,8 @@ body > article {
     padding: 3em 0;
 
     .image {
-      width: 24em;
-      height: 24em;
+      width: 15em;
+      height: 15em;
       margin: 0;
       margin-top: 3em;
     }
@@ -668,6 +673,7 @@ body > article {
 
   #header-li {
     text-align: center;
+    width: 100%;
 
     ul {
       display: inline-block;
@@ -732,8 +738,9 @@ body > article {
   button,
   .button {
     text-align: center;
-    width: 100%;
+    width: 70%;
     padding: 1em 0 1em 0;
+    margin: 0.5em 0;
 
     &.large {
       letter-spacing: 0;
@@ -771,14 +778,6 @@ body > article {
         margin: -50px 0 50px -40px;
         width: auto;
       }
-    }
-
-    &.style1 {
-      max-width: 32em;
-    }
-
-    &.style2 {
-      max-width: 32em;
     }
   }
 
@@ -842,6 +841,8 @@ body > article {
       }
     }
   }
+
+
   #header-li {
     text-align: center;
 
@@ -889,9 +890,6 @@ body > article {
   }
 }
 
-#header-h1 {
-  line-height: 1em;
-}
 
 header {
   background-color: $body-sec-color;
@@ -899,6 +897,7 @@ header {
 
 #promotion-box {
   background-color: #490a29;
+  width: 100%;
 }
 
 footer {
