--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ h1 {
   font-size: clamp(2em, calc(20px + 1vw), 3.25em); }
 
 h2, h3, h4, h5, h6 {
+  padding-top: 1.5em;
   margin: 0 0 2em 0; }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -1254,7 +1255,7 @@ input[type=checkbox] {
   height: 1em;
   flex-shrink: 0;
   flex-grow: 0;
-  border: 1px solid #ffffff;
+  border: 1px solid #fff;
   border-radius: 0.25em;
   margin-right: 0.5em;
   background-repeat: no-repeat;
@@ -1474,5 +1475,51 @@ input[type=checkbox] {
   .input-group input:valid {
     outline: none;
     border: 2px solid #f55e2c; }
+
+/* questions */
+#questions-row {
+  background-color: #490a29; }
+  #questions-row .row {
+    padding-bottom: 1em; }
+  #questions-row details {
+    width: 100%;
+    text-align: justify;
+    padding-right: 25px; }
+  #questions-row details[open] summary ~ * {
+    animation: open 0.3s ease-in-out; }
+@keyframes open {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+  #questions-row details summary::-webkit-details-marker {
+    display: none; }
+  #questions-row details summary {
+    width: 100%;
+    border-bottom: 1px solid #fff;
+    position: relative;
+    cursor: pointer;
+    font-weight: 300;
+    list-style: none;
+    text-align: left; }
+  #questions-row details summary:after {
+    content: "+";
+    color: #f55e2c;
+    font-size: 2em;
+    position: absolute;
+    padding-left: 0.5em;
+    line-height: 0;
+    margin-top: 0.75rem;
+    right: 0;
+    font-weight: 200;
+    transform-origin: 70% 0;
+    transition: 200ms linear; }
+  #questions-row details[open] summary:after {
+    transform: rotate(45deg); }
+  #questions-row details summary {
+    outline: 0; }
+  #questions-row details p {
+    margin: 0 0 1rem;
+    padding-top: 1rem; }
 
 /*# sourceMappingURL=main.css.map */
