--- a/css/main.scss
+++ b/css/main.scss
@@ -119,6 +119,7 @@ h1 {
 }
 
 h2, h3, h4, h5, h6 {
+  padding-top: 1.5em;
   margin: 0 0 2em 0;
 }
 
@@ -947,7 +948,7 @@ input[type=checkbox] {
   height: 1em;
   flex-shrink: 0;
   flex-grow: 0;
-  border: 1px solid #ffffff;
+  border: 1px solid $font-color;
   border-radius: 0.25em;
   margin-right: 0.5em;
   background-repeat: no-repeat;
@@ -1273,5 +1274,76 @@ input[type=checkbox] {
   input:valid {
     outline: none;
     border: 2px solid $main-color;
+  }
+}
+
+
+/* questions */
+
+#questions-row {
+  background-color: $section-color;
+
+  .row {
+    padding-bottom: 1em;
+  }
+
+  details {
+    width: 100%;
+    text-align: justify;
+    padding-right: 25px;
+  }
+
+  details[open] summary ~ * {
+    animation: open 0.3s ease-in-out;
+  }
+
+  @keyframes open {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  details summary::-webkit-details-marker {
+    display: none;
+  }
+
+  details summary {
+    width: 100%;
+    border-bottom: 1px solid $font-color;
+    position: relative;
+    cursor: pointer;
+    font-weight: 300;
+    list-style: none;
+    text-align: left;
+  }
+
+  details summary:after {
+    content: "+";
+    color: $main-color;
+    font-size: 2em;
+    position: absolute;
+    padding-left: 0.5em;
+    line-height: 0;
+    margin-top: 0.75rem;
+    right: 0;
+    font-weight: 200;
+    transform-origin: 70% 0;
+    transition: 200ms linear;
+  }
+
+  details[open] summary:after {
+    transform: rotate(45deg);
+  }
+
+  details summary {
+    outline: 0;
+  }
+
+  details p {
+    margin: 0 0 1rem;
+    padding-top: 1rem;
   }
 }
