--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,49 @@ header > p {
       float: right;
       width: 40%;
       image-rendering: pixelated; }
+  .wide-row #brief-box {
+    display: flex;
+    align-items: center;
+    text-align: left;
+    max-width: 100%;
+    justify-content: space-between; }
+    .wide-row #brief-box .text {
+      position: relative;
+      float: right;
+      width: 50%; }
+    .wide-row #brief-box #brief-img {
+      width: 45%;
+      height: 100%;
+      max-width: 460px; }
+    .wide-row #brief-box img {
+      position: absolute;
+      transform: translateY(-20%);
+      float: right;
+      width: 35%;
+      max-width: 460px;
+      image-rendering: pixelated; }
+    .wide-row #brief-box a {
+      text-align: center; }
+  @media screen and (max-width: 980px) {
+    .wide-row #brief-box {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center; }
+      .wide-row #brief-box .text {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%; }
+        .wide-row #brief-box .text h2 {
+          margin-bottom: 1em; }
+      .wide-row #brief-box #brief-img {
+        width: 100%;
+        height: 70vw;
+        padding-bottom: 2%; }
+      .wide-row #brief-box img {
+        transform: translateY(-20%);
+        width: 80%; } }
 
 /* Container */
 .container {
@@ -852,7 +895,8 @@ header > p {
 input[type="button"],
 input[type="submit"],
 input[type="reset"],
-button {
+button,
+.button {
   background-color: #f55e2c;
   -webkit-appearance: none;
   position: relative;
@@ -873,23 +917,27 @@ button {
   input[type="button"]:hover,
   input[type="submit"]:hover,
   input[type="reset"]:hover,
-  button:hover {
+  button:hover,
+  .button:hover {
     background-color: #f56b41; }
   input[type="button"]:active,
   input[type="submit"]:active,
   input[type="reset"]:active,
-  button:active {
+  button:active,
+  .button:active {
     background-color: #f55e2c;
     top: 1px; }
   input[type="button"].alt,
   input[type="submit"].alt,
   input[type="reset"].alt,
-  button.alt {
+  button.alt,
+  .button.alt {
     box-shadow: inset 0 0 0 1px #242424, inset 0 2px 1px 0 rgba(255, 255, 255, 0.2); }
     input[type="button"].alt:active,
     input[type="submit"].alt:active,
     input[type="reset"].alt:active,
-    button.alt:active {
+    button.alt:active,
+    .button.alt:active {
       background-color: #3f3f3f; }
 
 /* List */
@@ -1263,11 +1311,11 @@ input[type=checkbox] {
   background-size: 50% 50%; }
 
 .custom-checkbox:not(:disabled):not(:checked) + label:hover::before {
-  border-color: #ff8962; }
+  border-color: #f7835d; }
 
 .custom-checkbox:not(:disabled):active + label::before {
-  background-color: #ff8962;
-  border-color: #d57150; }
+  background-color: #f7835d;
+  border-color: #f67144; }
 
 .custom-checkbox:focus + label::before {
   box-shadow: 0 0 0 0.2rem rgba(245, 94, 44, 0.4); }
@@ -1427,7 +1475,8 @@ input[type=checkbox] {
     outline: 0;
     padding: 7px 0;
     background: transparent;
-    transition: border-color 0.2s; }
+    transition: border-color 0.2s;
+    color: #fff; }
   .form__group .form__field::placeholder {
     color: transparent; }
   .form__group .form__field:placeholder-shown ~ .form__label {
@@ -1470,7 +1519,7 @@ input[type=checkbox] {
     background: none;
     padding: 1rem;
     font-size: 1rem;
-    color: white; }
+    color: #fff; }
   .input-group .text:focus,
   .input-group input:valid {
     outline: none;
@@ -1518,6 +1567,9 @@ input[type=checkbox] {
     transform: rotate(45deg); }
   #questions-row details summary {
     outline: 0; }
+  #questions-row summary #text {
+    width: 80%;
+    color: #242424; }
   #questions-row details p {
     margin: 0 0 1rem;
     padding-top: 1rem; }
