--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,6 @@
   vertical-align: baseline;
   box-sizing: border-box; }
 
-html {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  height: 100%; }
-
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block; }
@@ -1584,154 +1578,27 @@ input[type=checkbox] {
     margin: 0 0 1rem;
     padding-top: 1rem; }
 
-/* projects */
-#slider h1 {
-  margin: 0;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 32px;
-  color: #26384E;
-  transform: translateY(20px);
-  transition: all .4s ease;
-  transition-delay: .2s;
-  overflow: hidden;
-  max-width: 100%;
-  text-overflow: ellipsis;
-  white-space: nowrap; }
-  @media screen and (max-width: 520px) {
-    #slider h1 {
-      font-size: 16px;
-      line-height: 24px; } }
-#slider p {
-  font-size: 16px;
-  line-height: 24px;
-  color: #889DB8;
-  transform: translateY(20px);
-  transition: all .4s ease;
-  transition-delay: .3s;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis; }
-  @media screen and (max-width: 520px) {
-    #slider p {
-      font-size: 14px;
-      line-height: 20px; } }
-#slider .swiper-wrapper {
+/* slider */
+#slider .box {
   width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  z-index: 1;
-  position: relative; }
-#slider .swiper-container {
-  background: linear-gradient(270deg, #f7f9ff 0%, #f2f6ff 100%);
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  flex-wrap: wrap;
+  flex-direction: column; }
+#slider h2 {
+  width: 100%; }
+#slider .slider-container {
   width: 100%;
-  position: relative;
-  max-width: 420px;
-  height: 100%;
-  max-height: 420px;
-  border-radius: 10px; }
-#slider .slider-image-wrapper {
-  height: 200px;
-  width: 100%;
-  overflow: hidden; }
-#slider .slider-item {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  flex-shrink: 0;
-  opacity: 0;
-  background: linear-gradient(270deg, #f7f9ff 0%, #f2f6ff 100%);
-  cursor: grab; }
-  #slider .slider-item-content {
-    padding: 32px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: .4s; }
-    #slider .slider-item-content > * {
-      opacity: 0;
-      transform: translateY(20px); }
-#slider .swiper-slide-active .slider-item-content > * {
-  transform: translateY(0px);
-  opacity: 1; }
-#slider .slider-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: .2s; }
-#slider .swiper-pagination {
-  position: absolute;
-  left: 50%;
-  bottom: 8px;
-  transform: translatex(-50%);
-  z-index: 1;
-  width: auto !important; }
-#slider .swiper-pagination-bullet {
-  border-radius: 0;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  line-height: 30px;
-  font-size: 12px;
-  opacity: 1;
-  background: rgba(255, 185, 0, 0.3);
-  display: inline-block;
-  margin-right: 8px;
-  cursor: pointer;
-  transition: all 0.2s; }
-#slider .swiper-pagination-bullet-active {
-  background: #FFB200;
-  width: 20px;
-  border-radius: 10px; }
-#slider .slider-buttons {
-  position: absolute;
-  display: flex;
-  top: 100%;
-  justify-content: flex-end;
-  width: 100%;
-  padding-top: 8px; }
-#slider .swiper-button-next,
-#slider .swiper-button-prev {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  outline: none;
-  color: #fff;
-  position: relative;
-  margin-left: 4px; }
-  #slider .swiper-button-next:before,
-  #slider .swiper-button-prev:before {
-    content: '';
-    position: absolute;
-    background-color: #fff;
-    height: 1px;
-    width: 0;
-    left: 0;
-    bottom: -1px;
-    transition: .2s; }
-  #slider .swiper-button-next:hover:before,
-  #slider .swiper-button-prev:hover:before {
+  margin: 0 auto;
+  text-align: center; }
+  #slider .slider-container img {
+    width: 100%;
+    height: auto;
+    margin: auto; }
+  #slider .slider-container img, #slider .slider-container p, #slider .slider-container h3 {
+    transition: opacity 0.9s ease-in-out; }
+  #slider .slider-container p, #slider .slider-container h3 {
     width: 100%; }
-#slider .socials {
-  position: fixed;
-  top: 12px;
-  right: 16px;
-  display: flex;
-  align-items: center; }
-  #slider .socials .social-link {
-    display: inline-block;
-    margin-left: 8px;
-    color: #fff; }
-@media screen and (max-width: 520px) {
-  #slider .swiper-button-next:hover:before,
-  #slider .swiper-button-prev:hover:before {
-    display: none; } }
+  #slider .slider-container button {
+    padding: 0.5em 1em;
+    width: 10em; }
 
 /*# sourceMappingURL=main.css.map */
